--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo laudantium inventore consequatur quisquam suscipit a, nesciunt quidem deleniti. Magnam quasi ad deleniti totam et fuga consequuntur laboriosam rerum dignissimos ut?</h1>
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo laudantium inventore consequatur quisquam suscipit a, nesciunt quidem deleniti. Magnam quasi ad deleniti totam et fuga consequuntur laboriosam rerum dignissimos ut?</h1>
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo laudantium inventore consequatur quisquam suscipit a, nesciunt quidem deleniti. Magnam quasi ad deleniti totam et fuga consequuntur laboriosam rerum dignissimos ut?</h1>
-</body>
+<html>
+   <head>
+      <title>
+         Is it CheckPoint?
+      </title>
+      <!-- <link rel='shortcut icon' type=image/png href=favicon.png> -->
+      <style>
+         body{user-select:none;}
+         div{margin:0 auto;display:flex;justify-content:center;align-items:center;}
+         #r{height:70%;}
+         #c{flex:1;}
+         #a{font:bold 9rem sans-serif;}
+         @media(prefers-color-scheme:dark){body{background-color:black;color:white;}}
+      </style>
+   </head>
+   <body>
+      <div id=r>
+         <div id=c><span id=a>NO</span></div>
+         <div id=c><span id=a>IT'S NOT A CHECKPOINT ISSUE</span></div>
+      </div>
+   </body>
 </html>
