--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </head>
    <body>
       <div id=r>
-         <div id=c><span id=a>NO</span></div>
+         <!-- <div id=c><span id=a>NO</span></div> -->
          <div id=c><span id=a>IT'S NOT A CHECKPOINT ISSUE</span></div>
       </div>
    </body>
