--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
          #r{height:70%;}
          #c{flex:1;}
          #a{font:bold 9rem sans-serif;}
-         @media(prefers-color-scheme:dark){body{background-color:black;color:white;}}
+         @media(prefers-color-scheme:dark){body{background-color:white;color:black;}}
       </style>
    </head>
    <body>
       <div id=r>
          <!-- <div id=c><span id=a>NO</span></div> -->
-         <div id=c><span id=a>IT'S NOT A CHECKPOINT ISSUE</span></div>
+         <div id=c><span id=a>NO</span></div>
       </div>
    </body>
 </html>
