--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,7 @@
     }
   }
   body::before {
-    content: "3 strings / 117 chars / 30.06s duration";
+    content: "LINK TO SPONSER COULD GO HERE?";
     display: block;
     position: absolute;
     bottom: 0;
