--- a/index.html
+++ b/index.html
@@ -1951,7 +1951,7 @@
   }
   @media (max-width: 575px) {
     body::before {
-      content: "3 strings \a 117 chars \a 30.06s duration";
+      content: "LINK TO SPONSER COULD GO HERE?";
     }
   }
     </style>
