--- a/index.html
+++ b/index.html
@@ -1962,4 +1962,15 @@
   <body>
   
   </body>
-  </html>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-795L6PJJL7"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-795L6PJJL7');
+        </script>
+
+</html>
