--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,8 @@
     }
   }
   body::before {
-    content: "LINK TO SPONSER COULD GO HERE?";
+     <!-- content: "LINK TO SPONSER COULD GO HERE?"; -->
+      content: "<a href="mailto:smith.itpro@gmail.com">Sponser Link?</a>"  
     display: block;
     position: absolute;
     bottom: 0;
@@ -1951,7 +1952,8 @@
   }
   @media (max-width: 575px) {
     body::before {
-      content: "LINK TO SPONSER COULD GO HERE?";
+      <!-- content: "LINK TO SPONSER COULD GO HERE?"; -->
+      content: "<a href="mailto:smith.itpro@gmail.com">Sponser Link?</a>"  
     }
   }
     </style>
